# composite_rules

./: .gitignore  README.md  pyproject.toml
alchemical_out/: n1_alchemical_rule_collection_summary.json
alchems/: cli.py  io.py
alchems/alchemical_rules/: alchemical.py  classify_alchemical.py
alchems/composite_rules/: extract.py
alchems/protection/: __init__.py  analysis.py  chython_rules.py  outputs.py
alchems/scoring/: overlap.py
comp_output/n1/: n1_composite_rule_extraction_summary.json  n1_t2_composite_rules.tsv  n1_t3_composite_rules.tsv  n1_t4_composite_rules.tsv  n1_t5_composite_rules.tsv
comp_output/n5/: n5_composite_rule_extraction_summary.json  n5_t2_composite_rules.tsv  n5_t3_composite_rules.tsv  n5_t4_composite_rules.tsv  (+1 more)
configs/: protection_analysis.yaml  rule_extraction_functional_groups.yaml
docs/: index.rst  preprocessing.rst
paroutes_sb_res/: paroutes_all_sb_cgr_errors.json  paroutes_all_sb_cgr_summary.json  paroutes_n1_sb_cgr_errors.json  paroutes_n1_sb_cgr_summary.json  paroutes_n5_sb_cgr_errors.json  paroutes_n5_sb_cgr_summary.json
route_inspector/: io.py  preprocess_routes.py
tests/: test_alchemical.py  test_classify_alchemical.py  test_extract.py  test_output.py  test_preprocess_routes.py  test_protection.py  test_scoring_overlap.py  test_sequences.py  test_unwrap.py
tutorials/: README.md  alchem_overlap_venn.ipynb  analyze_protection.ipynb  check_mol_rule.ipynb  classifiy_alchemy.ipynb  routes_without_composite.ipynb  test_alchemical.ipynb  test_composite.ipynb  test_diversity.ipynb  test_protecting.ipynb  test_scoring.ipynb
(+9 files in other folders)
